# stormvogel

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  Untitled.ipynb  cp_gifs.sh  crowds.drn  model.html  nand.drn  nbconvert.sh  new-gym.ipynb  pyproject.toml  pyrightconfig.json  start.sh  stormdays.json  stormdays_tutorial.ipynb
.github/workflows/: docker.yml  docs.yml  lint.yml  pypi.yml  test.yml  testwostormpy.yml
doc/: conf.py  die.ipynb  index.rst
docs/: 1-landing.py  conf.py  index.rst  model.html
docs/1-Model-Construction/: 1-Building-dtmcs.py  2-Building-mdps.ipynb  2-Building-mdps.py  3-Building-ctmcs.ipynb  3-Building-ctmcs.py  4-Building-pomdps.py  5-Parametric-models.py  6-Stormpy-conversion.py  model.html
examples/: create_model.py  die.py  monty_hall.py  monty_hall_pomdp.py  nuclear_fusion_ctmc.py  simple_ma.py  stormpy_ctmc.py  stormpy_dtmc.py  stormpy_mdp.py  stormpy_pomdp.py  stormpy_to_stormvogel.py
model_checking_assignmnent/: model.html  old.ipynb  prism.ipynb
notebooks/: 2.ipynb  Dep.ipynb  Get positions.ipynb  Messenger.ipynb  Messenger2.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  bond.ipynb  ctmc.ipynb  custom_layout.json  die.html  die.ipynb  diegraph.html  editor.ipynb  giphouse.ipynb  groups.html  hi.html  layouts.ipynb  model.html  monty.html  monty_hall.ipynb  new_die.ipynb  new_vis.ipynb  nx.html  server_test.ipynb  stars.html  study custom layout.html  study default layout.html  study.ipynb  temp.html  test.html  test.ipynb  two.ipynb
old_notebooks/: Dep.ipynb  GIF.html  Untitled1.ipynb  Untitled2.ipynb  _README.txt  broken.html  export-if.html  export.html  giphouse.ipynb  mess.ipynb  model.html  new-gym.ipynb  stormdays_tutorial.ipynb  stormdays_tutorial_solution.ipynb
stormvogel/: __init__.py  autoscale_svg.py  bird.py  buttons.py  canvas2svg.js  communication_server.py  dict_editor.py  dict_editor_test.py  displayable.py  editors.py  graph.py  grid.py  html_generation.py  html_templates.py  layout.py  layout_editor.py  lib.py  local_server.py  magic.py  map.py  mapping.py  model.py  model_checking.py  network.py  new_visualization.py  parametric.py  parametric_representation.py  pgc.py  property_builder.py  rdict.py  result.py  show.py  simulator.py  svgcanvas.js  vis-network-9.1.9-patched.js  visjs.py  visualization.py
tests/: saved_test_layout.json  test_bird.py  test_graph.py  test_interval.py  test_layout.json  test_layout.py  test_map.py  test_mapping.py  test_model_checking.py  test_model_creation.py  test_model_methods.py  test_number_to_string.py  test_parametric.py  test_pgc.py  test_pmc.py  test_property_builder.py  test_rdict.py  test_result.py  test_simulator.py  test_value_to_string.py  test_visualization.py
tutorial/: storm.ipynb  stormpy.ipynb
(+283 files in other folders)
