[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stormvogel"
version = "0.1.0"
description = "User-friendly frontend to the Storm model checker"
authors = ["The stormvogel team"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.6"
pyright = "^1.1.368"

[tool.ruff]
src = ["stormvogel", "examples"]
line-length = 88
target-version = "py311"
fix = true
