[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stormvogel"
version = "0.1.0"
description = "User-friendly frontend to the Storm model checker"
authors = ["The stormvogel team"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipywidgets = "^8.1.3"
pyvis = "^0.3.2"
numpy = "^2.0.1"
pandas = "^2.2.2"
nbval = "^0.11.0"
sphinx-autoapi = "^3.3.1"
pytest-mock = "^3.14.0"
matplotlib = "^3.9.2"
anyio = "^4.6.0"
nbmake = "^1.5.4"
mock = "^5.1.0"
jupyter = "^1.1.1"
bidict = "^0.23.1"
gymnasium = "^1.1.1"
imageio = "^2.37.0"
pygame = "^2.6.1"
cairosvg = "^2.7.1"
svgpathtools = "^1.6.1"
lxml = "^5.3.2"
nbdime = "^4.0.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.4.6"
pyright = "^1.1.368"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
jupyterlab = "^4.2.2"
sphinx = "^7.3.7"
furo = "^2024.5.6"
nbsphinx = "^0.9.4"

[tool.ruff]
src = ["stormvogel", "examples"]
line-length = 88
target-version = "py311"
fix = true

[tool.pyright]
venvPath = "."
venv = ".venv"
